# HW1-FAST-AQ-Parser

./: example.py  pyproject.toml
seqparser/: seq.py
tests/: bad.fq  empty_line.fa  empty_line.fq  test_parsers.py  test_transcribe.py
