[build-system]
requires = [
	"flit_core >=3.2,<4",
	]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[project]
requires-python = ">= 3.7"
name = "seqparser"
authors = [{name = "Yagmur Doruk Polcyn", email = "yagmur.dorukpolcyn@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest"
]

[project.urls]
Home = "https://github.com/BMI203-2024/HW1-FAST-AQ-Parser.git"
